# paraglidingin_front_elm

./: .gitignore  Makefile  README.md  build.sbt  haskellServer.cabal
app/: Main.hs
app/assets/static/: elm.js  index.html
app/elm/: elm-package.json  package.json
app/elm/src/: Main.elm  Model.elm  Routing.elm  Update.elm  View.elm
app/elm/src/Helper/: Helpers.elm
app/elm/src/Model/: Model.elm
app/elm/src/Update/: Update.elm
app/elm/src/View/: EmailInput.elm  Page.elm  PageHeader.elm  SearchResultList.elm  TagList.elm
app/elm/src/update/: Update.elm
app/elm/src/view/: SearchResultList.elm  TagList.elm  View.elm
app/jvm/src/main/scala/server/: Server.scala
elm/: elm-package.json  package.json
elm/src/Helper/: Helpers.elm
elm/src/Model/: Model.elm
elm/src/Request/: Search.elm  Tags.elm
elm/src/Update/: Update.elm
elm/src/View/: PageHeader.elm  SearchResultList.elm  TagInput.elm  TagList.elm
project/: Dependencies.scala
src/: Api.hs  App.hs  ClientConnections.hs  Lib.hs
var/www/: index.html
