name:                haskellServer
version:             0.1.0.0
homepage:            https://github.com/githubuser/haskellServer#readme
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
  other-modules:       Api, ClientConnections
  build-depends:       base >= 4.7 && < 5
                       , servant
                       , servant-server
                       , base-compat
                       , aeson
                       , http-media
                       , wai
                       , warp
                       , directory
  default-language:    Haskell2010

executable haskellServer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskellServer
  default-language:    Haskell2010

test-suite haskellServer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellServer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskellServer
